mobile scroll remove

--- a/map.html
+++ b/map.html
@@ -111,7 +111,7 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
     </div>
   </div>
   <div id="playerYT"></div>
-  <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  <div style="font-size: 1px;">Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
   <!--<iframe
   src="https://player.twitch.tv/?channel=minjuni2848&parent=sunnyfive.net&muted=true"
