--- a/features.html
+++ b/features.html
@@ -133,14 +133,17 @@
 <div class="text_align">
   <div class="section-heading blur_test3 blur_test_font" >IoT-based Home Automation with various scenarios</div>
 
-<video class="video_wrap2"   src="./img/sunny2.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
+<video class="video_wrap2"   src="./img/sunny2.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline >
+  <source src="./img/sunny2.mp4" type="video/mp4"></video>
 <!-- 해상도 조절 시 공백 없으려면 height 값 auto 로-->
 
 </div>
 <div class="text_align">
   <div class="section-heading blur_test3 blur_test_font" >Set up a beautiful sky outside the window</div>
 
-<video class="video_wrap2"   src="./img/sunny3.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
+<video class="video_wrap2"  poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline >
+  <source src="./img/sunny3.mp4" type="video/mp4">
+</video>
 <!-- 해상도 조절 시 공백 없으려면 height 값 auto 로-->
 
 </div>
