--- a/timeline.html
+++ b/timeline.html
@@ -118,7 +118,7 @@
   </div>
   <div class="timeline">
     <div class="timeline-item" data-text="Samsung Electronics Creative Lab">
-      <div class="timeline__content"><img class="timeline__img" src="./img/bgmk.png"/>
+      <div class="timeline__content"><img class="timeline__img" src="./img/201903.jpg"/>
         <h2 class="timeline__content-title">2019.03</h2>
         <p class="timeline__content-desc">
           Five Samsung engineers band together in a c-lab to give healthy, bright and warm sunlight to those who need sunlight and lack sunlight.</p>
@@ -149,13 +149,13 @@
       </div>
     </div>
     <div class="timeline-item" data-text="Sunyfive Co., Ltd. established">
-      <div class="timeline__content"><img class="timeline__img" src="./img/bgmk.png"/>
+      <div class="timeline__content"><img class="timeline__img" src="./img/202005.jpeg"/>
         <h2 class="timeline__content-title">2020.05</h2>
         <p class="timeline__content-desc">Samsung Electronics' spin-off start-up.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="Moving into KIRO Gangnam ICT Robot Living Lab">
-      <div class="timeline__content"><img class="timeline__img" src="./img/bgmk.png"/>
+      <div class="timeline__content"><img class="timeline__img" src="./img/2020052.jpg"/>
         <h2 class="timeline__content-title">2020.05</h2>
         <p class="timeline__content-desc">
           Selection of tenant companies recruited from KIRO(KOREA INSTITUTE OF ROBOTICS & TECHNOLOGY CONVERGENCE) Gangnam ICT Robot Living Lab
@@ -163,7 +163,7 @@
       </div>
     </div>
     <div class="timeline-item" data-text="Second Samsung C&T collaboration">
-      <div class="timeline__content"><img class="timeline__img" src="./img/bgmk.png"/>
+      <div class="timeline__content"><img class="timeline__img" src="./img/202008.png"/>
         <h2 class="timeline__content-title">2020.08</h2>
         <p class="timeline__content-desc">Bathroom ceiling lighting for vitamin d synthesis.</p>
       </div>
