--- a/members.html
+++ b/members.html
@@ -75,29 +75,29 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+        <ul class="navbar-nav ml-auto" >
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="index.html">Sunny Five</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="#features">Members</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="board.html">Announcement</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="news.html">Related News</a>
           </li>
-          <li style = "display:none"  class="nav-item">
+          <li style = "display:none"  class="nav-item" style="padding: 0px;">
             <a class="nav-link js-scroll-trigger" href="map.html">Map</a>
           </li>
         </ul>
@@ -116,20 +116,23 @@
 <div class="video_wrap masthead" style="position:relative;" > <iframe title="vimeo-player" src="https://player.vimeo.com/video/434660121?autoplay=1&loop=1&autopause=0&muted=1&background=1" width="640" height="360" frameborder="0" allow="autoplay;" allowfullscreen></iframe> 
 
 </div>-->
-<section class="wrapper style1">
+<section class="wrapper style1" style="padding: 11em 0 4em 0;">
   <div class="inner">
     <!-- 2 Columns -->
       <div class="flex flex-2">
         <div class="col col1">
           <div class="image round fit">
-            <a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+            <a href="generic.html" class="link"><img src="img/bgmj-crop.png" alt="" /></a>
           </div>
         </div>
         <div class="col col2">
-          <h3>Maecenas a gravida quam</h3>
-          <p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-          <p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-          <a href="#" class="button">Learn More</a>
+          <h3>CEO. Minjun Kim</h3>
+          <p style="text-align: left;">CEO and Hardware development</p>
+          <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Application HW product development​</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Galaxy Tab, Gear Development</p>
+  
         </div>
       </div>
   </div>
@@ -140,51 +143,86 @@
   <div class="inner">
     <div class="flex flex-2">
       <div class="col col2">
-        <h3>Suspendisse quis massa vel justo</h3>
-        <p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-        <p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-        <a href="#" class="button">Learn More</a>
+        <h3>CSO. Taesik Cho</h3>
+        <p style="text-align: left;">CSO and Mechanical Designer</p>
+        <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
+        <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;">Heat dissipation, noise analysis, design and optimization</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;"> Optical design</p>
       </div>
       <div class="col col1 first">
         <div class="image round fit">
-          <a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+          <a href="generic.html" class="link"><img src="img/bgts2-crop.png" alt="" /></a>
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="text_align" style="margin-top:80px">
-  <div class="section-heading blur_test3 blur_test_font" >Sunlight moving according to the Day Cycle</div>
+<section class="wrapper style1">
+  <div class="inner">
+    <!-- 2 Columns -->
+      <div class="flex flex-2">
+        <div class="col col1">
+          <div class="image round fit">
+            <a href="generic.html" class="link"><img src="img/bgmk-crop.png" alt="" /></a>
+          </div>
+        </div>
+        <div class="col col2">
+          <h3>CTO. Myungkyum Kim</h3>
+          <p style="text-align: left;">CTO and Software development</p>
+          <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;">Autonomous driving SW​</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Vision based SLAM / Planning</p>
+        </div>
+      </div>
+  </div>
+</section>
 
-<video class="video_wrap2"   src="./img/sunny_stb.mp4" type="video/mp4" poster="img/sunnyproto2.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-<!-- 해상도 조절 시 공백 없으려면 height 값 auto 로-->
+<!-- Section -->
+<section class="wrapper style2">
+  <div class="inner">
+    <div class="flex flex-2">
+      <div class="col col2">
+        <h3>CMO. Jeongho Han</h3>
+        <p style="text-align: left;">CMO and Software development</p>
+        <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
+        <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;">SEC, TIZEN API Test tool development and testing</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;">Samsung research dashboard development and operation</p>
+      </div>
+      <div class="col col1 first">
+        <div class="image round fit">
+          <a href="generic.html" class="link"><img src="img/bgjh-crop.png" alt="" /></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="wrapper style1">
+  <div class="inner">
+    <!-- 2 Columns -->
+      <div class="flex flex-2">
+        <div class="col col1">
+          <div class="image round fit">
+            <a href="generic.html" class="link"><img src="img/bgsy-crop.png" alt="" /></a>
+          </div>
+        </div>
+        <div class="col col2">
+          <h3>COO. Sooyeon Park</h3>
+          <p style="text-align: left;">COO and Strategic Planning</p>
+          <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;">TV SW, DTV broadcasting App/MW development​</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;">AI Speaker Bluetooth development</p>
+        </div>
+      </div>
+  </div>
+</section>
 
-</div>
-<div class="text_align">
-  <div class="section-heading blur_test3 blur_test_font" >Full spectrum sunlight colors from dawn to sunset</div>
-
-<video class="video_wrap2"   src="./img/temperature.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-<!-- 해상도 조절 시 공백 없으려면 height 값 auto 로-->
-
-</div>
-<div class="text_align">
-  <div class="section-heading blur_test3 blur_test_font" >IoT-based Home Automation with various scenarios</div>
-
-<video class="video_wrap2"   src="./img/sunny2.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-<!-- 해상도 조절 시 공백 없으려면 height 값 auto 로-->
-
-</div>
-<div class="text_align">
-  <div class="section-heading blur_test3 blur_test_font" >Set up a beautiful sky outside the window</div>
-
-<video class="video_wrap2"   src="./img/sunny3.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-<!-- 해상도 조절 시 공백 없으려면 height 값 auto 로-->
-
-</div>
 
 
-
-  <section class="contact " id="contact">
+  <section class="contact " id="contact" style="padding: 50px 0; font-family: 'Catamaran';">
     <div class="container">
       <div class="col-lg-12 my-auto">
         <div class="container-fluid">
@@ -197,7 +235,8 @@
               </div>
 
               <div class="col-lg-6">
-                <h2>We
+                <h2 style="font-weight: 200;
+                letter-spacing: 1px;">We
                   <i class="fas fa-heart"></i>
                   new friends!</h2>
                 <ul class="list-inline list-social">
@@ -227,7 +266,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer style="padding: 25px 0;">
     <div class="container">
       <p>&copy; COPYRIGHT (C) Sunnyfive. All Rights Reserved.</p>
       <ul class="list-inline">
