--- a/features.html
+++ b/features.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Members</a>
+            <a class="nav-link js-scroll-trigger" href="members.html">Members</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
