--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@ text-center hideme"  id="raemian">
                   <i class="fas fa-heart"></i>
                   new friends!</h2>
                 <ul class="list-inline list-social">
-                  <li class="list-inline-item social-twitter">
-                    <a href="#">
-                      <i class="fab fa-twitter"></i>
+                  <li class="list-inline-item social-google-plus">
+                    <a href="https://www.youtube.com/channel/UC0m3GZ1IunhdF2cQIz0SZbg">
+                      <i class="fab fa-youtube"></i>
                     </a>
                   </li>
                   <li class="list-inline-item social-facebook">
@@ -244,7 +244,7 @@ text-center hideme"  id="raemian">
                   </li>
                   <li class="list-inline-item social-google-plus">
                     <a href="#">
-                      <i class="fab fa-google-plus-g"></i>
+                      <i class="fab fa-instagram"></i>
                     </a>
                   </li>
                 </ul>
