--- a/news.html
+++ b/news.html
@@ -609,20 +609,20 @@ showBoardLists();
               <h2>We
                 <i class="fas fa-heart"></i>
                 new friends!</h2>
-              <ul class="list-inline list-social">
-                <li class="list-inline-item social-twitter">
-                  <a href="#">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item social-facebook">
-                  <a href="https://www.facebook.com/sunnyfive.sunnyfive.12">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item social-google-plus">
-                  <a href="#">
-                    <i class="fab fa-google-plus-g"></i>
+                <ul class="list-inline list-social">
+                  <li class="list-inline-item social-google-plus">
+                    <a href="https://www.youtube.com/channel/UC0m3GZ1IunhdF2cQIz0SZbg">
+                      <i class="fab fa-youtube"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-facebook">
+                    <a href="https://www.facebook.com/sunnyfive.sunnyfive.12">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-google-plus">
+                    <a href="#">
+                      <i class="fab fa-instagram"></i>
                   </a>
                 </li>
               </ul>
