homepage update after 3

--- a/board.html
+++ b/board.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Members</a>
+            <a class="nav-link js-scroll-trigger" href="members.html">Members</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -597,7 +597,7 @@ showBoardLists();
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6">
-              <p style="text-align: left;" class="section">SunnyFive CEO, Minjun Kim</p>
+              <p style="text-align: left;" class="section">SunnyFive CEO, Taesik Cho</p>
               <p style="text-align: left;" class="section">Email : sunnyfive@sunnyfive.net</p>
               <p style="text-align: left;" class="section">Phone : +82-02-459-0045</p>
               <p style="text-align: left;" class="section">Address : ASIA ICT 205, 4, Jagok-ro 7-gil, Gangnam-gu, Seoul, Republic of Korea</p>
