--- a/members.html
+++ b/members.html
@@ -122,12 +122,12 @@
       <div class="flex flex-2">
         <div class="col col1">
           <div class="image round fit">
-            <a href="generic.html" class="link"><img src="img/bgmj-crop.png" alt="" /></a>
+            <a href="generic.html" class="link"><img src="img/bgts2-crop.png" alt="" /></a>
           </div>
         </div>
         <div class="col col2">
-          <h3>CEO. Minjun Kim</h3>
-          <p style="text-align: left;">CEO and Hardware development</p>
+          <h3>CEO. Taesik Cho</h3>
+          <p style="text-align: left;">CEO and Mechanical Designer</p>
           <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
           <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
           <p style="text-align: left; margin: 0.5em 0 0 0;"> Application HW product development​</p>
@@ -143,16 +143,16 @@
   <div class="inner">
     <div class="flex flex-2">
       <div class="col col2">
-        <h3>CSO. Taesik Cho</h3>
-        <p style="text-align: left;">CSO and Mechanical Designer</p>
+        <h3>CTO. Myungkyum Kim</h3>
+        <p style="text-align: left;">CTO and Software, Hardware development</p>
         <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
         <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
-        <p style="text-align: left; margin: 0.5em 0 0 0;">Heat dissipation, noise analysis, design and optimization</p>
-        <p style="text-align: left; margin: 0.5em 0 0 0;"> Optical design</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;">Autonomous driving SW​</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;"> Vision based SLAM / Planning</p>
       </div>
       <div class="col col1 first">
         <div class="image round fit">
-          <a href="generic.html" class="link"><img src="img/bgts2-crop.png" alt="" /></a>
+          <a href="generic.html" class="link"><img src="img/bgmk-crop.png" alt="" /></a>
         </div>
       </div>
     </div>
@@ -164,61 +164,22 @@
       <div class="flex flex-2">
         <div class="col col1">
           <div class="image round fit">
-            <a href="generic.html" class="link"><img src="img/bgmk-crop.png" alt="" /></a>
+            <a href="generic.html" class="link"><img src="img/bgjh-crop.png" alt="" /></a>
           </div>
         </div>
         <div class="col col2">
-          <h3>CTO. Myungkyum Kim</h3>
-          <p style="text-align: left;">CTO and Software development</p>
+          <h3>CMO. Jeongho Han</h3>
+          <p style="text-align: left;">CMO and Software development</p>
           <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
           <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
-          <p style="text-align: left; margin: 0.5em 0 0 0;">Autonomous driving SW​</p>
-          <p style="text-align: left; margin: 0.5em 0 0 0;"> Vision based SLAM / Planning</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;">SEC, TIZEN API Test tool development and testing</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;">Samsung research dashboard development and operation</p>
         </div>
       </div>
   </div>
 </section>
 
-<!-- Section -->
-<section class="wrapper style2">
-  <div class="inner">
-    <div class="flex flex-2">
-      <div class="col col2">
-        <h3>CMO. Jeongho Han</h3>
-        <p style="text-align: left;">CMO and Software development</p>
-        <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
-        <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
-        <p style="text-align: left; margin: 0.5em 0 0 0;">SEC, TIZEN API Test tool development and testing</p>
-        <p style="text-align: left; margin: 0.5em 0 0 0;">Samsung research dashboard development and operation</p>
-      </div>
-      <div class="col col1 first">
-        <div class="image round fit">
-          <a href="generic.html" class="link"><img src="img/bgjh-crop.png" alt="" /></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="wrapper style1">
-  <div class="inner">
-    <!-- 2 Columns -->
-      <div class="flex flex-2">
-        <div class="col col1">
-          <div class="image round fit">
-            <a href="generic.html" class="link"><img src="img/bgsy-crop.png" alt="" /></a>
-          </div>
-        </div>
-        <div class="col col2">
-          <h3>COO. Sooyeon Park</h3>
-          <p style="text-align: left;">COO and Strategic Planning</p>
-          <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
-          <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
-          <p style="text-align: left; margin: 0.5em 0 0 0;">TV SW, DTV broadcasting App/MW development​</p>
-          <p style="text-align: left; margin: 0.5em 0 0 0;">AI Speaker Bluetooth development</p>
-        </div>
-      </div>
-  </div>
-</section>
+
 
 
 
@@ -228,7 +189,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6">
-              <p style="text-align: left;" class="section">SunnyFive CEO, Minjun Kim</p>
+              <p style="text-align: left;" class="section">SunnyFive CEO, Taesik Cho</p>
               <p style="text-align: left;" class="section">Email : sunnyfive@sunnyfive.net</p>
               <p style="text-align: left;" class="section">Phone : +82-02-459-0045</p>
               <p style="text-align: left;" class="section">Address : ASIA ICT 205, 4, Jagok-ro 7-gil, Gangnam-gu, Seoul, Republic of Korea</p>
