--- a/features.html
+++ b/features.html
@@ -156,7 +156,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6">
-              <p style="text-align: left;" class="section">SunnyFive CEO, Minjun Kim</p>
+              <p style="text-align: left;" class="section">SunnyFive CEO, Taesik Cho</p>
               <p style="text-align: left;" class="section">Email : sunnyfive@sunnyfive.net</p>
               <p style="text-align: left;" class="section">Phone : +82-02-459-0045</p>
               <p style="text-align: left;" class="section">Address : ASIA ICT 205, 4, Jagok-ro 7-gil, Gangnam-gu, Seoul, Republic of Korea</p>
