--- a/timeline.html
+++ b/timeline.html
@@ -139,13 +139,13 @@
     <div class="timeline-item" data-text="Samsung Electronics' In-house Exhibition - C-Lab Fair">
       <div class="timeline__content"><img class="timeline__img" src="./img/clabfair.png"/>
         <h2 class="timeline__content-title">2019.11</h2>
-        <p class="timeline__content-desc">In 1908 he helped the group of officers who toppled the Sultan. Mustafa Kemal'scareer flourished as he won his heroism in the far corners of the Ottoman Empire,including Albania and Tripoli. He also briefly served as a staff officer in Salonica andIstanbul and as a military attache in Sofia.</p>
+        <p class="timeline__content-desc">Sunnyside artificial sunlight window was well-received and ranked high at Samsung in-house exhibitions.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="CES 2020, in Eureka Park">
       <div class="timeline__content"><img class="timeline__img" src="./img/ces.png"/>
         <h2 class="timeline__content-title">2019.12</h2>
-        <p class="timeline__content-desc">In 1915, when Dardanelles campaign was launched, Colonel Mustafa Kemal became anational hero by winning successive victories and finally repelling the invaders.</p>
+        <p class="timeline__content-desc">At CES 2020, we received praise and sales inquiries from many visitors, and we received collaboration proposals from many companies.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="Sunyfive Co., Ltd. established">
