--- a/members.html
+++ b/members.html
@@ -130,9 +130,9 @@
           <p style="text-align: left;">CEO and Mechanical Designer</p>
           <h5 style="text-align: left; margin:0"> < Experience and Skills ></h5>
           <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
-          <p style="text-align: left; margin: 0.5em 0 0 0;"> Application HW product development​</p>
-          <p style="text-align: left; margin: 0.5em 0 0 0;"> Galaxy Tab, Gear Development</p>
-  
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Heat dissipation, noise analysis, design and optimization</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Optical design</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;"> Investment attraction, operation</p>
         </div>
       </div>
   </div>
@@ -149,6 +149,7 @@
         <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
         <p style="text-align: left; margin: 0.5em 0 0 0;">Autonomous driving SW​</p>
         <p style="text-align: left; margin: 0.5em 0 0 0;"> Vision based SLAM / Planning</p>
+        <p style="text-align: left; margin: 0.5em 0 0 0;"> Application HW product development​</p>
       </div>
       <div class="col col1 first">
         <div class="image round fit">
@@ -174,6 +175,7 @@
           <p style="text-align: left; margin: 0.5em 0 0 0;"> Samsung Electronics</p>
           <p style="text-align: left; margin: 0.5em 0 0 0;">SEC, TIZEN API Test tool development and testing</p>
           <p style="text-align: left; margin: 0.5em 0 0 0;">Samsung research dashboard development and operation</p>
+          <p style="text-align: left; margin: 0.5em 0 0 0;">Planning, Marketing, Finance</p>
         </div>
       </div>
   </div>
