--- a/bond2.html
+++ b/bond2.html
@@ -113,7 +113,7 @@
         <div class="header-content mx-auto" >  
           <!--<a href="#download" style="position:absolute; " class="mb-4 btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
           <h1 id="1p" style="padding:50px 0px;" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>-->
-          <h1 id="1p" style="padding:0px 0px; color: black; text-align: center;" >해산 및 채권제출 공고</h1></div>
+          <h1 id="1p" style="padding:0px 0px; color: black; text-align: center;" >해산 및 채권제출 2차 공고</h1></div>
         </div>
       </div>
 
