--- a/board.html
+++ b/board.html
@@ -278,6 +278,7 @@ transform: scale(0.93);
 </head>
 <body>
 <main class="main__container">
+  <section>
 <div class="board__container">
 <table class="board type10">
 <thead class="board__table-head">
@@ -609,7 +610,7 @@ showBoardLists();
     
 
 
-  <section class="contact " id="contact" style="position:absolute; bottom: 92px; width: 100%;">
+  <section class="contact " id="contact" style="bottom: 92px; width: 100%;">
     <div class="container">
       <div class="col-lg-12 my-auto">
         <div class="container-fluid">
@@ -652,7 +653,7 @@ showBoardLists();
     </div>
   </section>
 
-  <footer style="position:absolute; bottom:0px; width: 100%;">
+  <footer style=" bottom:0px; width: 100%;">
     <div class="container">
       <p>&copy; COPYRIGHT (C) Sunnyfive. All Rights Reserved.</p>
       <ul class="list-inline">
