--- a/board.html
+++ b/board.html
@@ -277,7 +277,7 @@ transform: scale(0.93);
 </style>
 </head>
 <body>
-<main class="main__container">
+<main class="main__container" style="height: auto;">
   <section>
 <div class="board__container">
 <table class="board type10">
