--- a/board.html
+++ b/board.html
@@ -292,7 +292,15 @@ transform: scale(0.93);
 </thead>
 
 <tbody class="board__contents" id="board-body">
+  <tr class="board__content" onclick="popup2()">
+    <td class="board__content-column">6</td>
+    <a href="#" id="link-to-content0">
+      <td class="board__content-column" >해산 및 채권제출 2차 공고 </td></a>
+      <td class="board__content-column">SUNNYFIVE</td>
+      <td class="board__content-column">2021.10.27</td>
 
+      
+    </tr>
   <tr class="board__content" onclick="popup()">
       <td class="board__content-column">5</td>
       <a href="#" id="link-to-content0">
